cloned website commit 2

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     
                     <div class="block"><input type="date" class="inputresize"></div>
                     <div class="block"><input type="text" class="inputresize"></div>
+                    <div class="smalldate">Date</div>
                 </div>
 
 
@@ -64,15 +65,15 @@
                 <div class="row">
                     <div class="fullblock">What aspect of the product or service were you most satisfied with?</div>
                     <div class="block heading">
-                            <input type="radio" id="quality" name="mostsatisfied" value="Quality">
+                            <input type="radio" id="quality" name="most" value="Quality">
                             <label for="quality">Quality</label><br>
-                            <input type="radio" id="customerservice" name="mostsatisfied" value="Customer Service">
+                            <input type="radio" id="customerservice" name="most" value="Customer Service">
                             <label for="customerservice">Customer Service</label><br>
                     </div>
                     <div class="block heading">
-                        <input type="radio" id="price" name="mostsatisfied" value="Price">
+                        <input type="radio" id="price" name="most" value="Price">
                         <label for="price">Price</label><br>
-                        <input type="radio" id="installation" name="mostsatisfied" value="Installation or first use experience">
+                        <input type="radio" id="installation" name="most" value="Installation or first use experience">
                         <label for="installation">Installation or first use experience</label><br>
                     </div>
                 </div>
@@ -80,16 +81,16 @@
                 <div class="row">
                     <div class="fullblock">What aspect of the product or service were you least satisfied with?</div>
                     <div class="block heading">
-                        <input type="radio" id="quality" name="mostsatisfied" value="Quality">
-                        <label for="quality">Quality</label><br>
-                        <input type="radio" id="customerservice" name="mostsatisfied" value="Customer Service">
-                        <label for="customerservice">Customer Service</label><br>
+                        <input type="radio" id="lquality" name="least" value="Quality">
+                        <label for="lquality">Quality</label><br>
+                        <input type="radio" id="lcustomerservice" name="least" value="Customer Service">
+                        <label for="lcustomerservice">Customer Service</label><br>
                     </div>
                     <div class="block heading">
-                        <input type="radio" id="price" name="mostsatisfied" value="Price">
-                        <label for="price">Price</label><br>
-                        <input type="radio" id="installation" name="mostsatisfied" value="Installation or first use experience">
-                        <label for="installation">Installation or first use experience</label><br>
+                        <input type="radio" id="lprice" name="least" value="Price">
+                        <label for="lprice">Price</label><br>
+                        <input type="radio" id="linstallation" name="least" value="Installation or first use experience">
+                        <label for="linstallation">Installation or first use experience</label><br>
                     </div>
                 </div>
 
